Fixed project-name scrollable overflowing

--- a/desktop.css
+++ b/desktop.css
@@ -270,7 +270,7 @@ nav {
   font-size: 2.777vw;
   font-weight: 700;
   line-height: 80%;
-  overflow: hidden;
+  overflow-x: clip;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
